k8s/jenkins/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    kubernetes.io/ingress.class: nginx

    # 🔥 관리자 PC(192.168.10.10)만 접속 허용
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.10.10/32,192.168.30.10/32"

spec:
  ingressClassName: nginx
  rules:
  - host: jenkins.4jo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
